--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-			    expertise as a Java Full Stack Developer. Proficient in SDLC methodologies like Waterfall and Agile, she collaborates effectively with global teams. 
+			    I am expertise as a Java Full Stack Developer. Proficient in SDLC methodologies like Waterfall and Agile, she collaborates effectively with global teams. 
 			    I excel in Java/J2EE technologies, including Spring, Hibernate, and web services. My skills span front-end technologies , back-end programming, 
 			    and proficiency in tools like Eclipse and Jenkins. 
                     </p>
