--- a/index.html
+++ b/index.html
@@ -73,10 +73,14 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-			    I am expertise as a Java Full Stack Developer. Proficient in SDLC methodologies like Waterfall and Agile, she collaborates effectively with global teams. 
-			    I excel in Java/J2EE technologies, including Spring, Hibernate, and web services. My skills span front-end technologies , back-end programming, 
-			    and proficiency in tools like Eclipse and Jenkins. 
-                    </p>
+I am a Java Full Stack Developer having expertise in designing, developing, and maintaining robust web applications.
+			    Adept at utilizing the entire software development life cycle to deliver high-quality solutions. Proficient in both 
+			    front-end and back-end technologies, with expertise in Java, Spring Framework, Angular, and various database management
+			    systems. Demonstrated ability to analyze complex technical requirements and translate them into efficient and scalable 
+			    software solutions. Experienced in collaborating with cross-functional teams to ensure seamless integration of applications 
+			    and adherence to best coding practices. Passionate about staying abreast of emerging technologies and trends to continuously 
+			    enhance skill set. 
+			    Committed to delivering innovative and user-centric solutions that meet and exceed client expectations.                    </p>
                 </div>
             </div>
         </div>
