--- a/index.html
+++ b/index.html
@@ -88,12 +88,18 @@ I am a Java Full Stack Developer having expertise in designing, developing, and 
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="January 2022 – Current">
+                <h3>VERIZON COMMUNICATIONS, TEXAS, USA.</h3>
+                <h4>JAVA FULL STACK DEVELOPER </h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+			Experienced full stack Java developer in a global agile team, enhancing conferencing software. 
+			Led UI development using Angular, applied service-oriented Architecture principles, and implemented Restful web services 
+			with Jersey and Spring Boot. Involved in requirements gathering, JUnit testing, SQL query writing, and Oracle database
+			interaction. Configured and deployed applications on IBM WebLogic, addressed production issues, and documented projects. 
+			Utilized Git for version control, 
+			supported batch data feed jobs, and implemented CI/CD builds with Jenkins in UNIX environment.</br>
+                 Skills: Angular, JavaScript, Java, Web Services, oracle database, SQL, PL/SQL, WebLogic, and application deployed on UNIX.
+		</p>
             </div>
 
             <div data-date="September 2015 – September 2016">
