--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ I am a Java Full Stack Developer having expertise in designing, developing, and 
 		</p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="December 2021 – January 2022">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
@@ -110,7 +110,14 @@ I am a Java Full Stack Developer having expertise in designing, developing, and 
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="February 2020 – November 2021">
+                <h3>Employer Name</h3>
+                <h4>Job Title</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+		 <div data-date="October 2017 – January 2020">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
