--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@ I am a Java Full Stack Developer having expertise in designing, developing, and 
             </div>
 
             <div data-date="December 2021 – January 2022">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>7-ELEVEN</h3>
+                <h4>JAVA FULL STACK DEVELOPER</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
+Led business requirement gathering, managing multiple projects concurrently, and ensuring timely delivery. Developed business layers using Spring, Spring Boot, Microservices, Hibernate, and Angular for web applications, employing Struts, servlets, EJBs, and web services for personal applications. Proficient in Struts 2.0, tiles configuration, and web.xml/struts-config.xml setup. Ensured code quality, detailed technical specifications, and adherence to non-functional requirements. Utilized HTML, XML, CSS, AJAX for UI development, Jersey for web services, and SQL/PLSQL for Oracle database interactions. Configured JMS and IBM MQ integrations, deployed on IBM WebLogic and JBoss. Employed Git, Perforce, and Jenkins for version control and CI/CD builds. Integrated ELK stack for data visualization.                </p>
+Skills: Java, J2EE, JSP, Servlet, Struts, EJB, Oracle 11g, WebLogic, Ant, Perforce (for Personal), Spring Boot, Microservices, Oracle 12c, JBoss (after migration from WebLogic), Angular, Maven, Git (for Pro web), SQL, RESTful Web Services, SQL Developer, JMS, , Html, CSS, Java Script, jQuery, SOAP UI, Jenkins and AWS for application deployment.
+	    </div>
 
             <div data-date="February 2020 – November 2021">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>NESTLE,USA</h3>
+                <h4>JAVA FULL STACK DEVELOPER</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
             </div>
 		 <div data-date="October 2017 – January 2020">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>NEWGEN SOFTWARE TECHNOLOGIES, BANGLORE, INDIA</h3>
+                <h4>JAVA CONSULTANT</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
