--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ I am a Java Full Stack Developer having expertise in designing, developing, and 
 			with Jersey and Spring Boot. Involved in requirements gathering, JUnit testing, SQL query writing, and Oracle database
 			interaction. Configured and deployed applications on IBM WebLogic, addressed production issues, and documented projects. 
 			Utilized Git for version control, 
-			supported batch data feed jobs, and implemented CI/CD builds with Jenkins in UNIX environment.</br>
+			supported batch data feed jobs, and implemented CI/CD builds with Jenkins in UNIX environment.</p> </br>
                  Skills: Angular, JavaScript, Java, Web Services, oracle database, SQL, PL/SQL, WebLogic, and application deployed on UNIX.
-		</p>
+		
             </div>
 
             <div data-date="December 2021 – January 2022">
@@ -112,9 +112,8 @@ for web applications, employing Struts, servlets, EJBs, and web services for per
 Proficient in Struts 2.0, tiles configuration, and web.xml/struts-config.xml setup. Ensured code quality, 
 detailed technical specifications, and adherence to non-functional requirements. Utilized HTML, XML, CSS, AJAX for UI development, 
 Jersey for web services, and SQL/PLSQL for Oracle database interactions. Configured JMS and IBM MQ integrations, deployed on IBM WebLogic and JBoss. Employed Git, Perforce, and 
-			Jenkins for version control and CI/CD builds. Integrated ELK stack for data visualization.    </br>            </p> </br>
-
-		    Skills: Java, J2EE, JSP, Servlet, Struts, EJB, Oracle 11g, WebLogic, Ant, Perforce (for Personal), Spring Boot, Microservices, Oracle 12c, JBoss (after migration from WebLogic), Angular, Maven, Git (for Pro web), SQL, RESTful Web Services, SQL Developer, JMS, , Html, CSS, Java Script, jQuery, SOAP UI, Jenkins and AWS for application deployment.
+Jenkins for version control and CI/CD builds. Integrated ELK stack for data visualization.           </p> </br>
+Skills: Java, J2EE, JSP, Servlet, Struts, EJB, Oracle 11g, WebLogic, Ant, Perforce (for Personal), Spring Boot, Microservices, Oracle 12c, JBoss (after migration from WebLogic), Angular, Maven, Git (for Pro web), SQL, RESTful Web Services, SQL Developer, JMS, , Html, CSS, Java Script, jQuery, SOAP UI, Jenkins and AWS for application deployment.
 	    </div>
 
             <div data-date="February 2020 – November 2021">
@@ -126,15 +125,16 @@ Developed new modules with Spring, Hibernate, and RESTful Web Services, addressi
 shell scripts for data file downloads. Focused on Spring MVC components, DAO design pattern, and JUnit testing for
 			Business Service classes. Conducted integration testing, deployed on Tomcat, and resolved bug 
 			issues during testing phases. Proficient in writing SQL queries and Stored Procedures for Oracle
-			database interaction. Utilized SVN for version control in maintaining project versions. </br>
+			database interaction. Utilized SVN for version control in maintaining project versions. </p> </br>
 Skills: Java, Spring, HTML/HTML5, Hibernate, Web Services (RESTFUL),Shell Script, Experian, Spring MVC, View Resolver, JUnit, Postman, QA testing, Tomcat web server, Oracle database.
-		</p>
+		
             </div>
 		 <div data-date="October 2017 – January 2020">
                 <h3>NEWGEN SOFTWARE TECHNOLOGIES, BANGLORE, INDIA</h3>
                 <h4>JAVA CONSULTANT</h4>
                 <p>
-Developed POJOs and Hibernate mapping files, configured in Hibernate environment, and implemented layer interfaces using Spring and Hibernate. Wrote JUnit test cases to validate functionality, implemented web services, and conducted code refactoring. Deployed on JBoss using Maven, participated in bug fixing, and monitored logs in local and remote environments. Conducted unit and integration testing, analyzing and addressing defects in the application.                </p>
+Developed POJOs and Hibernate mapping files, configured in Hibernate environment, and implemented layer interfaces using Spring and Hibernate. Wrote JUnit test cases to validate functionality, implemented web services, and conducted code refactoring. Deployed on JBoss using Maven, participated in bug fixing, and monitored logs in local and remote environments. Conducted unit and integration testing, analyzing and addressing defects in the
+			application. </p> </br>
 Skills: Java, J2EE, HTML, CSS, Spring, Spring Web Services, Spring AOP, Hibernate, SQL, Ant, SOAP, XML, SOAP UI, Junit, SVN, Eclipse, Oracle, JBOSS, Log 4j, Windows 7, Linux.          
 		 </div>
         </div>
