--- a/index.html
+++ b/index.html
@@ -170,32 +170,32 @@ Skills: Java, J2EE, HTML, CSS, Spring, Spring Web Services, Spring AOP, Hibernat
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
+            <li>Java</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
             <li>AngularJs</li>
             <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>HTML/HTML5</li>
+            <li>Oracle</li>
+            <li>PL/SQL</li>
+            <li>Kafka</li>
+            <li>MicroService</li>
+            <li>Spring</li>
+            <li>SpringBoot</li>
+            <li>Hibernate</li>
+            <li>AWS</li>
+            <li>Azure</li>
+            <li>SOAP UI</li>
+            <li>Apache Tomcat</li>
+            <li>CSS/CSS3</li>
+            <li>jQuery</li>
+            <li>SQL</li>
+            <li>Eclipse</li>
+            <li>IntelliJ</li>
+            <li>GIT</li>
+            <li>Java Persistence API</li>
+            <li>XML</li>
+            <li>CSS</li>
         </ul>
     </div>
     <!-- End #skills -->
