--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Skills: Java, J2EE, HTML, CSS, Spring, Spring Web Services, Spring AOP, Hibernat
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2024</span> 	Sreeja Reddy Nalla
                     </p>
                 </div>
                 <div class="col-sm-2 top">
