--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Skills: Java, J2EE, HTML, CSS, Spring, Spring Web Services, Spring AOP, Hibernat
                         </li>
                         
                         <li>
-                            <a href="www.linkedin.com/in/sreeja-nalla" target="www.linkedin.com/in/sreeja-nalla"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/sreeja-nalla/" target="https://www.linkedin.com/in/sreeja-nalla/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
