--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Skills: Java, J2EE, HTML, CSS, Spring, Spring Web Services, Spring AOP, Hibernat
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2024</span> 	Sreeja Reddy Nalla
+                        Copyright &copy; <span id="current-year">2024</span> Sreeja Reddy Nalla
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -234,7 +234,7 @@ Skills: Java, J2EE, HTML, CSS, Spring, Spring Web Services, Spring AOP, Hibernat
                         </li>
                         
                         <li>
-                            <a href="https://www.linkedin.com/in/sreeja-nalla/" target="https://www.linkedin.com/in/sreeja-nalla/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="www.linkedin.com/in/sreeja-nalla" target="www.linkedin.com/in/sreeja-nalla"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
